--- a/Compline.ini
+++ b/Compline.ini
@@ -1,5 +1,5 @@
 [MongoDB]
-HOST = mongodb://UsrAdmCuradoria:compline%%402019@189.112.90.27:30011/db_curadoria
+HOST = mongodb://UsrAdmCuradoria:compline%%402019@189.112.90.27:30011/db_curadoria?retryWrites=True
 
 [Curadoria]
 DBNAME = db_curadoria
